--- a/assets/css/floens.css
+++ b/assets/css/floens.css
@@ -55,7 +55,7 @@
   --floens-text-gray-rgb: 154, 139, 130;
   --floens-base: #8A1725;
   --floens-base-rgb: 199, 132, 79;
-  --floens-base2: #E9CBBE;
+  --floens-base2: #FF9566;
   --floens-base2-rgb: 138, 81, 51;
   --floens-gray: #DED8D3;
   --floens-gray-rgb: 222, 216, 211;
